; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/core/extr_mmal_port_clock.c_mmal_ports_clock_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/core/extr_mmal_port_clock.c_mmal_ports_clock_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMAL_PORT_TYPE_CLOCK = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32** @mmal_ports_clock_alloc(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32**, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @MMAL_PORT_TYPE_CLOCK, align 4
  %15 = load i32, i32* %8, align 4
  %16 = zext i32 %15 to i64
  %17 = add i64 %16, 4
  %18 = trunc i64 %17 to i32
  %19 = call i32** @mmal_ports_alloc(i32* %12, i32 %13, i32 %14, i32 %18)
  store i32** %19, i32*** %11, align 8
  %20 = load i32**, i32*** %11, align 8
  %21 = icmp ne i32** %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %4
  store i32** null, i32*** %5, align 8
  br label %69

23:                                               ; preds = %4
  store i32 0, i32* %10, align 4
  br label %24

24:                                               ; preds = %41, %23
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp ult i32 %25, %26
  br i1 %27, label %28, label %44

28:                                               ; preds = %24
  %29 = load i32**, i32*** %11, align 8
  %30 = load i32, i32* %10, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i32*, i32** %29, i64 %31
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = call i64 @mmal_port_clock_setup(i32* %33, i32 %34, i32 %35)
  %37 = load i64, i64* @MMAL_SUCCESS, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %28
  br label %44

40:                                               ; preds = %28
  br label %41

41:                                               ; preds = %40
  %42 = load i32, i32* %10, align 4
  %43 = add i32 %42, 1
  store i32 %43, i32* %10, align 4
  br label %24

44:                                               ; preds = %39, %24
  %45 = load i32, i32* %10, align 4
  %46 = load i32, i32* %7, align 4
  %47 = icmp ne i32 %45, %46
  br i1 %47, label %48, label %67

48:                                               ; preds = %44
  %49 = load i32, i32* %10, align 4
  store i32 %49, i32* %7, align 4
  store i32 0, i32* %10, align 4
  br label %50

50:                                               ; preds = %61, %48
  %51 = load i32, i32* %10, align 4
  %52 = load i32, i32* %7, align 4
  %53 = icmp ult i32 %51, %52
  br i1 %53, label %54, label %64

54:                                               ; preds = %50
  %55 = load i32**, i32*** %11, align 8
  %56 = load i32, i32* %10, align 4
  %57 = zext i32 %56 to i64
  %58 = getelementptr inbounds i32*, i32** %55, i64 %57
  %59 = load i32*, i32** %58, align 8
  %60 = call i32 @mmal_port_clock_free(i32* %59)
  br label %61

61:                                               ; preds = %54
  %62 = load i32, i32* %10, align 4
  %63 = add i32 %62, 1
  store i32 %63, i32* %10, align 4
  br label %50

64:                                               ; preds = %50
  %65 = load i32**, i32*** %11, align 8
  %66 = call i32 @vcos_free(i32** %65)
  store i32** null, i32*** %5, align 8
  br label %69

67:                                               ; preds = %44
  %68 = load i32**, i32*** %11, align 8
  store i32** %68, i32*** %5, align 8
  br label %69

69:                                               ; preds = %67, %64, %22
  %70 = load i32**, i32*** %5, align 8
  ret i32** %70
}

declare dso_local i32** @mmal_ports_alloc(i32*, i32, i32, i32) #1

declare dso_local i64 @mmal_port_clock_setup(i32*, i32, i32) #1

declare dso_local i32 @mmal_port_clock_free(i32*) #1

declare dso_local i32 @vcos_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
